# scsl

./: .clang-tidy  .gitignore  Arena.cc  Arena.h  Buffer.cc  Buffer.h  CMakeDocs.txt  CMakeLists.txt  CMakePack.txt  Commander.cc  Commander.cpp  Commander.h  Dictionary.cc  Dictionary.h  Exceptions.cc  Exceptions.cpp  Exceptions.h  Flag.cc  Flag.h  LICENSE  Makefile  Phonebook.cc  Phonebook.h  README.md  README.rst  StringUtil.cc  StringUtil.h  TLV.cc  TLV.h  Test.cc  Test.h  WinHelpers.cc  WinHelpers.h  bufferTest.cc  dictionaryTest.cc  dictionary_test  flagTest.cc  klib.h  klibConfig.cmake  phonebook.cc  (+10 more)
.circleci/: config.yml
.trunk/: trunk.yaml
cmake/: docs.cmake  packaging.cmake
include/scmp/: Math.h  Motion2D.h  estimation.h  geom.h  math.h  motion2d.h  scmp.h
include/scmp/estimation/: Madgwick.h
include/scmp/filter/: Madgwick.h
include/scmp/geom/: Coord2D.h  Orientation.h  Quaternion.h  Vector.h  coord2d.h  orientation.h  quaternion.h  vector.h
include/scsl/: Arena.h  Buffer.h  Commander.h  Dictionary.h  Flags.h  SimpleConfig.h  StringUtil.h  TLV.h  scsl.h
include/sctest/: Assert.h  Checks.h  Exceptions.h  Report.h  SimpleSuite.h  checks.h  debug.h  sctest.h
src/scmp/: Coord2D.cc  Math.cc  Motion2D.cc  Orientation.cc  Quaternion.cc  coord2d.cc  math.cc  motion2d.cc  orientation.cc  quaternion.cc
src/sl/: Arena.cc  Buffer.cc  Commander.cc  Dictionary.cc  Exceptions.cc  Flag.cc  Flags.cc  Roll.cc  SimpleConfig.cc  StringUtil.cc  TLV.cc
src/test/: Assert.cc  Exceptions.cc  Report.cc  SimpleSuite.cc
test/: buffer.cc  config-explorer.cc  coord2d.cc  dictionary.cc  flag.cc  flags.cc  madgwick.cc  math.cc  orientation.cc  quaternion.cc  simple_suite_example.cc  stringutil.cc  test_fixtures.h  tlv.cc  vector.cc
